test/libsolidity/syntaxTests/comments/singleline_unicode_direction_override_1.sol
contract C {
    function f() public pure
    {
        // PDF
        // underflow ‬
    }
}
// ----
// ParserError 8936: (71-84): Unicode direction override underflow in comment or string literal.
